--- a/commands.yaml
+++ b/commands.yaml
@@ -1,32 +1,9 @@
-python3 run_hac.py --n_layers 2 --env m-bump-mdp-v0 --retrain --timesteps 200000 --seed 0 --group bump-mdp-hac-2 
-python3 run_hac.py --n_layers 2 --env m-bump-mdp-v0 --retrain --timesteps 200000 --seed 1 --group bump-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env m-bump-mdp-v0 --retrain --timesteps 200000 --seed 2 --group bump-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env m-bump-mdp-v0 --retrain --timesteps 200000 --seed 3 --group bump-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env m-bump-mdp-v0 --retrain --timesteps 200000 --seed 4 --group bump-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env m-bump-mdp-v0 --retrain --timesteps 200000 --seed 5 --group bump-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env m-bump-mdp-v0 --retrain --timesteps 200000 --seed 6 --group bump-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env m-bump-mdp-v0 --retrain --timesteps 200000 --seed 7 --group bump-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env m-bump-mdp-v0 --retrain --timesteps 200000 --seed 8 --group bump-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env m-bump-mdp-v0 --retrain --timesteps 200000 --seed 9 --group bump-mdp-hac-2
+python3 run_hac.py --n_layers 2 --env hac-inverted-pendulum-v0 --retrain --timesteps 2000000 --seed 0 --group 2-level
+python3 run_hac.py --n_layers 2 --env hac-inverted-pendulum-v0 --retrain --timesteps 2000000 --seed 1 --group 2-level
+python3 run_hac.py --n_layers 2 --env hac-inverted-pendulum-v0 --retrain --timesteps 2000000 --seed 2 --group 2-level
+python3 run_hac.py --n_layers 2 --env hac-inverted-pendulum-v0 --retrain --timesteps 2000000 --seed 3 --group 2-level
 
-python3 run_hac.py --n_layers 2 --env car-flag-mdp-v0 --retrain --timesteps 200000 --seed 0 --group car-flag-mdp-hac-2 
-python3 run_hac.py --n_layers 2 --env car-flag-mdp-v0 --retrain --timesteps 200000 --seed 1 --group car-flag-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env car-flag-mdp-v0 --retrain --timesteps 200000 --seed 2 --group car-flag-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env car-flag-mdp-v0 --retrain --timesteps 200000 --seed 3 --group car-flag-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env car-flag-mdp-v0 --retrain --timesteps 200000 --seed 4 --group car-flag-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env car-flag-mdp-v0 --retrain --timesteps 200000 --seed 5 --group car-flag-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env car-flag-mdp-v0 --retrain --timesteps 200000 --seed 6 --group car-flag-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env car-flag-mdp-v0 --retrain --timesteps 200000 --seed 7 --group car-flag-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env car-flag-mdp-v0 --retrain --timesteps 200000 --seed 8 --group car-flag-mdp-hac-2
-python3 run_hac.py --n_layers 2 --env car-flag-mdp-v0 --retrain --timesteps 200000 --seed 9 --group car-flag-mdp-hac-2
-
-python3 run_hac.py --n_layers 2 --env mountain-car-mdp-v0 --retrain --timesteps 200000 --seed 0 --group mountain-car-hac-2 
-python3 run_hac.py --n_layers 2 --env mountain-car-mdp-v0 --retrain --timesteps 200000 --seed 1 --group mountain-car-hac-2
-python3 run_hac.py --n_layers 2 --env mountain-car-mdp-v0 --retrain --timesteps 200000 --seed 2 --group mountain-car-hac-2
-python3 run_hac.py --n_layers 2 --env mountain-car-mdp-v0 --retrain --timesteps 200000 --seed 3 --group mountain-car-hac-2
-python3 run_hac.py --n_layers 2 --env mountain-car-mdp-v0 --retrain --timesteps 200000 --seed 4 --group mountain-car-hac-2
-python3 run_hac.py --n_layers 2 --env mountain-car-mdp-v0 --retrain --timesteps 200000 --seed 5 --group mountain-car-hac-2
-python3 run_hac.py --n_layers 2 --env mountain-car-mdp-v0 --retrain --timesteps 200000 --seed 6 --group mountain-car-hac-2
-python3 run_hac.py --n_layers 2 --env mountain-car-mdp-v0 --retrain --timesteps 200000 --seed 7 --group mountain-car-hac-2
-python3 run_hac.py --n_layers 2 --env mountain-car-mdp-v0 --retrain --timesteps 200000 --seed 8 --group mountain-car-hac-2
-python3 run_hac.py --n_layers 2 --env mountain-car-mdp-v0 --retrain --timesteps 200000 --seed 9 --group mountain-car-hac-2
+python3 run_hac.py --n_layers 3 --env hac-inverted-pendulum-v0 --retrain --timesteps 2000000 --seed 0 --group 3-level
+python3 run_hac.py --n_layers 3 --env hac-inverted-pendulum-v0 --retrain --timesteps 2000000 --seed 1 --group 3-level
+python3 run_hac.py --n_layers 3 --env hac-inverted-pendulum-v0 --retrain --timesteps 2000000 --seed 2 --group 3-level
+python3 run_hac.py --n_layers 3 --env hac-inverted-pendulum-v0 --retrain --timesteps 2000000 --seed 3 --group 3-level
