--- a/commands.yaml
+++ b/commands.yaml
@@ -9,12 +9,22 @@
 # python3 run_hac.py --n_layers 3 --env hac-inverted-pendulum-v0 --retrain --timesteps 2000000 --seed 3 --group 3-level
 
 
-python3 run_hac.py --n_layers 2 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 0 --group test-2-level
-python3 run_hac.py --n_layers 2 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 1 --group test-2-level
-python3 run_hac.py --n_layers 2 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 2 --group test-2-level
-python3 run_hac.py --n_layers 2 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 3 --group test-2-level
+# python3 run_hac.py --n_layers 2 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 0 --group test-2-level
+# python3 run_hac.py --n_layers 2 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 1 --group test-2-level
+# python3 run_hac.py --n_layers 2 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 2 --group test-2-level
+# python3 run_hac.py --n_layers 2 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 3 --group test-2-level
 
-python3 run_hac.py --n_layers 3 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 0 --group test-3-level
-python3 run_hac.py --n_layers 3 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 1 --group test-3-level
-python3 run_hac.py --n_layers 3 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 2 --group test-3-level
-python3 run_hac.py --n_layers 3 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 3 --group test-3-level
+# python3 run_hac.py --n_layers 3 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 0 --group test-3-level
+# python3 run_hac.py --n_layers 3 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 1 --group test-3-level
+# python3 run_hac.py --n_layers 3 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 2 --group test-3-level
+# python3 run_hac.py --n_layers 3 --env hac-mountain-car-v0 --retrain --timesteps 200000 --seed 3 --group test-3-level
+
+python3 run_hac.py --n_layers 2 --env hac-ur5-reacher-v0 --retrain --timesteps 200000 --seed 0 --group test-2-level
+python3 run_hac.py --n_layers 2 --env hac-ur5-reacher-v0 --retrain --timesteps 200000 --seed 1 --group test-2-level
+python3 run_hac.py --n_layers 2 --env hac-ur5-reacher-v0 --retrain --timesteps 200000 --seed 2 --group test-2-level
+python3 run_hac.py --n_layers 2 --env hac-ur5-reacher-v0 --retrain --timesteps 200000 --seed 3 --group test-2-level
+
+python3 run_hac.py --n_layers 3 --env hac-ur5-reacher-v0 --retrain --timesteps 200000 --seed 0 --group test-3-level
+python3 run_hac.py --n_layers 3 --env hac-ur5-reacher-v0 --retrain --timesteps 200000 --seed 1 --group test-3-level
+python3 run_hac.py --n_layers 3 --env hac-ur5-reacher-v0 --retrain --timesteps 200000 --seed 2 --group test-3-level
+python3 run_hac.py --n_layers 3 --env hac-ur5-reacher-v0 --retrain --timesteps 200000 --seed 3 --group test-3-level
