--- a/commands_theseus.yaml
+++ b/commands_theseus.yaml
@@ -1,9 +1,14 @@
-CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-ant-heaven-hell-v0 --retrain --timesteps 2000000 --seed 0 --group test-2-level
-CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-ant-heaven-hell-v0 --retrain --timesteps 2000000 --seed 1 --group test-2-level
-CUDA_VISIBLE_DEVICES=2, python3 run_hac.py --n_layers 2 --env hac-ant-heaven-hell-v0 --retrain --timesteps 2000000 --seed 2 --group test-2-level
-CUDA_VISIBLE_DEVICES=3, python3 run_hac.py --n_layers 2 --env hac-ant-heaven-hell-v0 --retrain --timesteps 2000000 --seed 3 --group test-2-level
+# CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-ant-heaven-hell-v0 --retrain --timesteps 2000000 --seed 0 --group test-2-level
+# CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-ant-heaven-hell-v0 --retrain --timesteps 2000000 --seed 1 --group test-2-level
+# CUDA_VISIBLE_DEVICES=2, python3 run_hac.py --n_layers 2 --env hac-ant-heaven-hell-v0 --retrain --timesteps 2000000 --seed 2 --group test-2-level
+# CUDA_VISIBLE_DEVICES=3, python3 run_hac.py --n_layers 2 --env hac-ant-heaven-hell-v0 --retrain --timesteps 2000000 --seed 3 --group test-2-level
 
-CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 20000000 --seed 0 --group test-2-level
-CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 20000000 --seed 1 --group test-2-level
-CUDA_VISIBLE_DEVICES=2, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 20000000 --seed 2 --group test-2-level
-CUDA_VISIBLE_DEVICES=3, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 20000000 --seed 3 --group test-2-level
+# CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 20000000 --seed 0 --group test-2-level
+# CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 20000000 --seed 1 --group test-2-level
+# CUDA_VISIBLE_DEVICES=2, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 20000000 --seed 2 --group test-2-level
+# CUDA_VISIBLE_DEVICES=3, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 20000000 --seed 3 --group test-2-level
+
+python3 run_hac.py --n_layers 2 --env hac-door-push-v0 --retrain --timesteps 60000000 --seed 0 --group test-2-level
+python3 run_hac.py --n_layers 2 --env hac-door-push-v0 --retrain --timesteps 60000000 --seed 1 --group test-2-level
+python3 run_hac.py --n_layers 2 --env hac-door-push-v0 --retrain --timesteps 60000000 --seed 2 --group test-2-level
+python3 run_hac.py --n_layers 2 --env hac-door-push-v0 --retrain --timesteps 60000000 --seed 3 --group test-2-level
