--- a/commands_xchao.yaml
+++ b/commands_xchao.yaml
@@ -1,11 +1,16 @@
-CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-car-flag-v0 --retrain --timesteps 200000 --seed 0 --group 2-level
-CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-car-flag-v0 --retrain --timesteps 200000 --seed 1 --group 2-level
-CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-car-flag-v0 --retrain --timesteps 200000 --seed 2 --group 2-level
-CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-car-flag-v0 --retrain --timesteps 200000 --seed 3 --group 2-level
+# CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-car-flag-v0 --retrain --timesteps 200000 --seed 0 --group 2-level
+# CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-car-flag-v0 --retrain --timesteps 200000 --seed 1 --group 2-level
+# CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-car-flag-v0 --retrain --timesteps 200000 --seed 2 --group 2-level
+# CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-car-flag-v0 --retrain --timesteps 200000 --seed 3 --group 2-level
 
-CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-two-boxes-check-v0 --retrain --timesteps 300000 --seed 0 --group 2-level
-CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-two-boxes-check-v0 --retrain --timesteps 300000 --seed 1 --group 2-level
-CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-two-boxes-check-v0 --retrain --timesteps 300000 --seed 2 --group 2-level
-CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-two-boxes-check-v0 --retrain --timesteps 300000 --seed 3 --group 2-level
+CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 2000000 --seed 0 --group noisy-obs --noisy-obs
+CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 2000000 --seed 1 --group noisy-obs --noisy-obs
+CUDA_VISIBLE_DEVICES=2, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 2000000 --seed 2 --group noisy-obs --noisy-obs
+CUDA_VISIBLE_DEVICES=3, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 2000000 --seed 3 --group noisy-obs --noisy-obs
+
+CUDA_VISIBLE_DEVICES=0, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 2000000 --seed 0 --group random-act --random-act
+CUDA_VISIBLE_DEVICES=1, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 2000000 --seed 1 --group random-act --random-act
+CUDA_VISIBLE_DEVICES=2, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 2000000 --seed 2 --group random-act --random-act
+CUDA_VISIBLE_DEVICES=3, python3 run_hac.py --n_layers 2 --env hac-ant-tag-v0 --retrain --timesteps 2000000 --seed 3 --group random-act --random-act
 
 
